[gd_scene load_steps=5 format=3 uid="uid://hmlfraf7gi8r"]

[ext_resource type="Script" path="res://interaction/Prefabs/chest/chest.gd" id="1_yv647"]
[ext_resource type="Texture2D" uid="uid://oblvu1gqtphm" path="res://assets/Sprites/chest.png" id="2_tkgbi"]
[ext_resource type="Script" path="res://interaction/Interactionarea/Interactionarea.gd" id="3_lomhk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_401qq"]
radius = 25.02

[node name="Chest" type="Node2D"]
position = Vector2(2.98023e-08, 5.96046e-08)
script = ExtResource("1_yv647")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.131, 0.118282)
texture = ExtResource("2_tkgbi")

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource("3_lomhk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_401qq")

[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited"]
